# sombra

./: Cargo.toml
src/: camera.rs  integrator.rs  lib.rs  light.rs  main.rs  material.rs  reflection.rs  sampler.rs  scene.rs  shape.rs
