[package]
name = "sombra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
indicatif = "0.17.7"
nalgebra = "0.32.3"
openexr = "0.11.0"
rand = "0.8.5"
